--- a/src/styles/mainContent.scss
+++ b/src/styles/mainContent.scss
@@ -4,7 +4,6 @@
   .cCategory {
     grid-column: 2;
     grid-row: auto;
-    margin-left: 1em;
   }
 }
 
