--- a/src/styles/originalHelpdocsStyles.scss
+++ b/src/styles/originalHelpdocsStyles.scss
@@ -995,7 +995,7 @@ span#no-results {
   grid-column: 2;
   -ms-grid-row: 2;
   grid-row: 1;
-  margin-top: 100px
+  margin-top: 100px;
 }
 
 .cCardIcon {
@@ -2002,7 +2002,6 @@ input::-webkit-input-placeholder {
   .cCategory {
     grid-column: auto;
     grid-row: auto;
-    margin-left: 1em
   }
 }
 
